src/objects/hed__Affiliation__c.object
<CustomObject>
    <description>Connection between a Contact and an Account.</description>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Contacts</relationshipLabel>
        <relationshipName>Affl_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Affiliation_Type__c</fullName>
        <formula>hed__Account__r.RecordType.Name</formula>
        <label>Affiliation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliated Accounts</relationshipLabel>
        <relationshipName>Affl_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Affiliation&apos;s Organization will be stored on the Contact record.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Athlete</fullName>
                </value>
                <value>
                    <fullName>Scholarship Recipient</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Teaching Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Transfer Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Affiliation</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>